--- a/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
@@ -160,20 +160,20 @@ consul:
     io.podman.annotations.userns: keep-id:uid=100,gid=1000
 
   podLabels:
-    traefik.enable: true
-    traefik.http.routers.consul-redirect.entrypoints: web
-    traefik.http.routers.consul-redirect.rule: Host(`consul.day1.sololab`)
-    traefik.http.routers.consul-redirect.middlewares: toHttps@file
-    traefik.http.routers.consul-redirect.service: consul
+    # traefik.enable: true
+    # traefik.http.routers.consul-redirect.entrypoints: web
+    # traefik.http.routers.consul-redirect.rule: Host(`consul.day1.sololab`)
+    # traefik.http.routers.consul-redirect.middlewares: toHttps@file
+    # traefik.http.routers.consul-redirect.service: consul
 
-    traefik.http.routers.consul.entrypoints: webSecure
-    traefik.http.routers.consul.rule: Host(`consul.day1.sololab`)
-    traefik.http.routers.consul.tls: true
-    traefik.http.routers.consul.service: consul
+    # traefik.http.routers.consul.entrypoints: webSecure
+    # traefik.http.routers.consul.rule: Host(`consul.day1.sololab`)
+    # traefik.http.routers.consul.tls: true
+    # traefik.http.routers.consul.service: consul
 
-    traefik.http.services.consul.loadBalancer.serversTransport: consul@file
-    traefik.http.services.consul.loadbalancer.server.scheme: https
-    traefik.http.services.consul.loadbalancer.server.port: 8501
+    # traefik.http.services.consul.loadBalancer.serversTransport: consul@file
+    # traefik.http.services.consul.loadbalancer.server.scheme: https
+    # traefik.http.services.consul.loadbalancer.server.port: 8501
 
     # traefik.tcp.routers.consul-web.entrypoints: webSecure
     # traefik.tcp.routers.consul-web.rule: HostSNI(`consul.day1.sololab`)
