--- a/TerraformWorkShop/Quadlet/grafana/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/grafana/attachments/values-sololab.yaml
@@ -48,20 +48,20 @@ grafana:
         # ref: https://grafana.com/docs/grafana/latest/administration/roles-and-permissions/#roles-and-permissions
         role_attribute_path: contains(groups[*], 'app-grafana-root') && 'GrafanaAdmin' || contains(groups[*], 'app-grafana-admin') && 'Admin' || contains(roles[*], 'app-grafana-editor') && 'Editor' || 'Viewer'
   podLabels:
-    traefik.enable: true
-    traefik.http.routers.grafana-redirect.entrypoints: web
-    traefik.http.routers.grafana-redirect.rule: Host(`grafana.day1.sololab`)
-    traefik.http.routers.grafana-redirect.middlewares: toHttps@file
-    traefik.http.routers.grafana-redirect.service: grafana
+    # traefik.enable: true
+    # traefik.http.routers.grafana-redirect.entrypoints: web
+    # traefik.http.routers.grafana-redirect.rule: Host(`grafana.day1.sololab`)
+    # traefik.http.routers.grafana-redirect.middlewares: toHttps@file
+    # traefik.http.routers.grafana-redirect.service: grafana
 
-    traefik.http.routers.grafana.entrypoints: webSecure
-    traefik.http.routers.grafana.rule: Host(`grafana.day1.sololab`)
-    traefik.http.routers.grafana.tls: true
-    traefik.http.routers.grafana.service: grafana
+    # traefik.http.routers.grafana.entrypoints: webSecure
+    # traefik.http.routers.grafana.rule: Host(`grafana.day1.sololab`)
+    # traefik.http.routers.grafana.tls: true
+    # traefik.http.routers.grafana.service: grafana
 
-    traefik.http.services.grafana.loadBalancer.serversTransport: grafana@file
-    traefik.http.services.grafana.loadbalancer.server.scheme: https
-    traefik.http.services.grafana.loadbalancer.server.port: 3000
+    # traefik.http.services.grafana.loadBalancer.serversTransport: grafana@file
+    # traefik.http.services.grafana.loadbalancer.server.scheme: https
+    # traefik.http.services.grafana.loadbalancer.server.port: 3000
 
     # traefik.tcp.routers.grafana.entrypoints: webSecure
     # traefik.tcp.routers.grafana.rule: HostSNI(`grafana.day1.sololab`)
