--- a/TerraformWorkShop/Quadlet/prometheus/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/attachments/values-sololab.yaml
@@ -6,34 +6,34 @@ prometheus:
   #     hostnames:
   #       - day1.node.consul
   podLabels:
-    traefik.enable: true
-    traefik.http.routers.prometheus-redirect.entrypoints: web
-    traefik.http.routers.prometheus-redirect.rule: Host(`prometheus.day1.sololab`)
-    traefik.http.routers.prometheus-redirect.middlewares: toHttps@file
-    traefik.http.routers.prometheus-redirect.service: prometheus
+    # traefik.enable: true
+    # traefik.http.routers.prometheus-redirect.entrypoints: web
+    # traefik.http.routers.prometheus-redirect.rule: Host(`prometheus.day1.sololab`)
+    # traefik.http.routers.prometheus-redirect.middlewares: toHttps@file
+    # traefik.http.routers.prometheus-redirect.service: prometheus
 
-    traefik.http.routers.prometheus.entryPoints: webSecure
-    traefik.http.routers.prometheus.rule: Host(`prometheus.day1.sololab`)
-    traefik.http.routers.prometheus.tls: true
-    traefik.http.routers.prometheus.service: prometheus
+    # traefik.http.routers.prometheus.entryPoints: webSecure
+    # traefik.http.routers.prometheus.rule: Host(`prometheus.day1.sololab`)
+    # traefik.http.routers.prometheus.tls: true
+    # traefik.http.routers.prometheus.service: prometheus
 
-    traefik.http.services.prometheus.loadBalancer.serversTransport: prometheus@file
-    traefik.http.services.prometheus.loadbalancer.server.scheme: https
-    traefik.http.services.prometheus.loadbalancer.server.port: 9090
+    # traefik.http.services.prometheus.loadBalancer.serversTransport: prometheus@file
+    # traefik.http.services.prometheus.loadbalancer.server.scheme: https
+    # traefik.http.services.prometheus.loadbalancer.server.port: 9090
 
-    traefik.http.routers.prometheus-blackbox-exporter-redirect.entrypoints: web
-    traefik.http.routers.prometheus-blackbox-exporter-redirect.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
-    traefik.http.routers.prometheus-blackbox-exporter-redirect.middlewares: toHttps@file
-    traefik.http.routers.prometheus-blackbox-exporter-redirect.service: prometheus-blackbox-exporter
+    # traefik.http.routers.prometheus-blackbox-exporter-redirect.entrypoints: web
+    # traefik.http.routers.prometheus-blackbox-exporter-redirect.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
+    # traefik.http.routers.prometheus-blackbox-exporter-redirect.middlewares: toHttps@file
+    # traefik.http.routers.prometheus-blackbox-exporter-redirect.service: prometheus-blackbox-exporter
 
-    traefik.http.routers.prometheus-blackbox-exporter.entryPoints: webSecure
-    traefik.http.routers.prometheus-blackbox-exporter.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
-    traefik.http.routers.prometheus-blackbox-exporter.tls: true
-    traefik.http.routers.prometheus-blackbox-exporter.service: prometheus-blackbox-exporter
+    # traefik.http.routers.prometheus-blackbox-exporter.entryPoints: webSecure
+    # traefik.http.routers.prometheus-blackbox-exporter.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
+    # traefik.http.routers.prometheus-blackbox-exporter.tls: true
+    # traefik.http.routers.prometheus-blackbox-exporter.service: prometheus-blackbox-exporter
 
     # traefik.http.services.prometheus-blackbox-exporter.loadBalancer.serversTransport: prometheus-blackbox-exporter@file
     # traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.scheme: https
-    traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.port: 9115
+    # traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.port: 9115
   # adopt bitnami image user id
   podAnnotations:
     io.podman.annotations.userns: keep-id:uid=1001,gid=1001
