--- a/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
@@ -24,14 +24,14 @@ traefik:
         sendAnonymousUsage: false
       entryPoints:
         traefik:
-          address: "192.168.255.10:8080"
+          address: ":8080"
         web:
-          address: "192.168.255.10:80"
+          address: ":80"
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
         webSecure:
-          address: "192.168.255.10:443"
+          address: ":443"
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
