consul-ops: add prefix in tags as filter for traefik

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -17,6 +17,7 @@ traefik:
             tls:
               ca: /etc/traefik/tls/ca.crt
           exposedByDefault: false
+          prefix: traefik-day1
       serversTransport:
         rootCAs:
           - /etc/traefik/tls/ca.crt
