--- a/TerraformWorkShop/Nomad/Job/traefik/attachments/static.traefik.yml
+++ b/TerraformWorkShop/Nomad/Job/traefik/attachments/static.traefik.yml
@@ -47,13 +47,13 @@ providers:
       tls:
         ca: /etc/traefik/tls/ca.crt
     exposedByDefault: false
-  docker:
-    endpoint: unix:///var/run/docker.sock
-    exposedByDefault: false
-    useBindPortIP: false
-  # file:
-  #   directory: /etc/traefik/dynamic
-  #   watch: true
+  # docker:
+  #   endpoint: unix:///var/run/docker.sock
+  #   exposedByDefault: false
+  #   useBindPortIP: false
+  file:
+    directory: /etc/traefik/dynamic
+    watch: true
 serversTransport:
   insecureSkipVerify: false
   rootCAs:
