nomad-deploy-podman-kube: remove vault ttl config

--- a/TerraformWorkShop/Quadlet/nomad/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/nomad/attachments/values-sololab.yaml
@@ -43,7 +43,7 @@ nomad:
         enabled: true
         default_identity:
           aud: ["vault.io"]
-          ttl: 1h
+          # ttl: 1h
 
   args:
     - agent
