OCI-ops: upgrade image version

--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -57,26 +57,26 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "fedora/postgresql-16:20250716",
-        "archive": "quay.io_fedora_postgresql-16_20250716.tar",
+        "publicRepo": "fedora/postgresql-16:20250827",
+        "archive": "quay.io_fedora_postgresql-16_20250827.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "fedora/postgresql-16:20250716",
+        "privateRepo": "fedora/postgresql-16:20250827",
         "description": "https://quay.io/repository/fedora/postgresql-16?tab=tags",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "sclorg/postgresql-16-c10s:20250716",
-        "archive": "quay.io_sclorg_postgresql-16-c10s_20250716.tar",
+        "publicRepo": "sclorg/postgresql-16-c10s:20250827",
+        "archive": "quay.io_sclorg_postgresql-16-c10s_20250827.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "sclorg/postgresql-16-c10s:20250716",
+        "privateRepo": "sclorg/postgresql-16-c10s:20250827",
         "description": "https://quay.io/repository/sclorg/postgresql-16-c10s?tab=tags",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "cockpit/ws:343",
-        "archive": "quay.io_cockpit_ws_343.tar",
+        "publicRepo": "cockpit/ws:345",
+        "archive": "quay.io_cockpit_ws_345.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "cockpit/ws:343",
+        "privateRepo": "cockpit/ws:345",
         "description": "https://quay.io/repository/cockpit/ws?tab=tags",
     },
     {
@@ -89,34 +89,34 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "sigoden/dufs:v0.43.0",
-        "archive": "docker.io_sigoden_dufs_v0.43.0.tar",
+        "publicRepo": "sigoden/dufs:v0.44.0",
+        "archive": "docker.io_sigoden_dufs_v0.44.0.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "sigoden/dufs:v0.43.0",
+        "privateRepo": "sigoden/dufs:v0.44.0",
         "description": "https://hub.docker.com/r/sigoden/dufs/tags",
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "lldap/lldap:2025-07-29-alpine-rootless",
-        "archive": "docker.io_lldap_lldap_2025-07-29-alpine-rootless.tar",
+        "publicRepo": "lldap/lldap:v0.6.2-alpine-rootless",
+        "archive": "docker.io_lldap_lldap_v0.6.2-alpine-rootless.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "lldap/lldap:2025-07-29-alpine-rootless",
+        "privateRepo": "lldap/lldap:v0.6.2-alpine-rootless",
         "description": "https://hub.docker.com/r/lldap/lldap/tags",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "coreos/etcd:v3.6.0",
-        "archive": "quay.io_coreos_etcd_v3.6.0.tar",
+        "publicRepo": "coreos/etcd:v3.6.4",
+        "archive": "quay.io_coreos_etcd_v3.6.4.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "coreos/etcd:v3.6.0",
+        "privateRepo": "coreos/etcd:v3.6.4",
         "description": "https://quay.io/repository/coreos/etcd?tab=tags",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "giantswarm/coredns:1.12.1",
-        "archive": "quay.io_giantswarm_coredns_1.12.1.tar",
+        "publicRepo": "giantswarm/coredns:1.12.3",
+        "archive": "quay.io_giantswarm_coredns_1.12.3.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "coredns/coredns:1.12.1",
+        "privateRepo": "coredns/coredns:1.12.3",
         "description": "https://hub.docker.com/r/coredns/coredns/tags, https://quay.io/repository/giantswarm/coredns?tab=tags",
     },
     {
@@ -129,10 +129,10 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.5.0",
-        "archive": "docker.io_library_traefik_v3.5.0.tar",
+        "publicRepo": "library/traefik:v3.5.1",
+        "archive": "docker.io_library_traefik_v3.5.1.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "library/traefik:v3.5.0",
+        "privateRepo": "library/traefik:v3.5.1",
         "description": "https://hub.docker.com/r/library/traefik/tags",
     },
     {
@@ -153,10 +153,10 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "navidys/prometheus-podman-exporter:v1.17.2",
-        "archive": "quay.io_navidys_prometheus-podman-exporter_v1.17.2.tar",
+        "publicRepo": "navidys/prometheus-podman-exporter:v1.18.0",
+        "archive": "quay.io_navidys_prometheus-podman-exporter_v1.18.0.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "navidys/prometheus-podman-exporter:v1.17.2",
+        "privateRepo": "navidys/prometheus-podman-exporter:v1.18.0",
         "description": "https://quay.io/repository/navidys/prometheus-podman-exporter?tab=tags",
     }
 ]
